--- a/docs-ref-autogen/azure-iot-device/SharedAccessKeyAuthenticationProvider.yml
+++ b/docs-ref-autogen/azure-iot-device/SharedAccessKeyAuthenticationProvider.yml
@@ -7,6 +7,7 @@ items:
       - azure-iot-device.SharedAccessKeyAuthenticationProvider.type
       - >-
         azure-iot-device.SharedAccessKeyAuthenticationProvider.getDeviceCredentials
+      - azure-iot-device.SharedAccessKeyAuthenticationProvider.stop
       - >-
         azure-iot-device.SharedAccessKeyAuthenticationProvider.fromConnectionString
     langs:
@@ -63,6 +64,17 @@ items:
           description: >
             function that will be called with either an error or a set of device
             credentials that can be used to authenticate with the IoT hub.
+    package: azure-iot-device
+  - uid: azure-iot-device.SharedAccessKeyAuthenticationProvider.stop
+    name: stop
+    children: []
+    type: method
+    langs:
+      - typeScript
+    summary: Stops the timer used to renew to SAS token.
+    syntax:
+      content: function stop()
+      parameters: []
     package: azure-iot-device
   - uid: >-
       azure-iot-device.SharedAccessKeyAuthenticationProvider.fromConnectionString
