--- a/docs-ref-autogen/azure-iot-common/Properties.yml
+++ b/docs-ref-autogen/azure-iot-common/Properties.yml
@@ -97,7 +97,7 @@ items:
           description: ''
       return:
         type:
-          - function
+          - Object
     package: azure-iot-common
   - uid: azure-iot-common.Properties.getValue
     name: getValue
